--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "at-js",
     "readme": "README.md",
     "scripts": {},
-    "version": "1.1.5",
+    "version": "1.2.0",
     "description": "README.md",
     "devDependencies": {},
     "directories": {},
@@ -12,5 +12,5 @@
             "email": "chemingjun@126.com",
             "name": "chemingjun"
         }
-    ]
+    ],"repository":"http://registry.npmjs.org"
 }
